--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,26 @@
    padding:0;
 }
 
-#header-img{
+#body {
 
-   width: 100%;
+   
+}
+
+#header{
+   height:100vh;
+}
+
+#header-img{
+   width:100%;
+   height:100vh;
+   
 }
 
 #headline{
-   color: red;
+
+}
+
+main{
+   
+ 
 }
