--- a/styles.css
+++ b/styles.css
@@ -7,26 +7,11 @@
    padding:0;
 }
 
-#body {
-
+#main{
    
+   height: 100vh;
+   width: 100%;
+   position: fixed;
+   bottom: 0;
 }
 
-#header{
-   height:100vh;
-}
-
-#header-img{
-   width:100%;
-   height:100vh;
-   
-}
-
-#headline{
-
-}
-
-main{
-   
- 
-}
