--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@
    padding:0;
 }
 
+html {
+   font-family: 'Spartan', sans-serif;
+
+}
+
 #body {
    background-repeat: no-repeat; 
    background-position: center;
@@ -57,10 +62,6 @@
    text-align: center;
    margin:0 10px;
    font-size:14px;
-}
-
-#input-temp {
-   
 }
 
 ::-webkit-input-placeholder { /* Edge */
@@ -117,4 +118,6 @@
 #footer {
    position: fixed;
    bottom:30px;
+   color:white;
+   font-size: 30px;
 }
