--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,6 @@
 
 html {
    font-family: 'Spartan', sans-serif;
-
 }
 
 #body {
@@ -26,23 +25,23 @@ html {
    flex-flow: column wrap;
    height: 100vh;
    width: 100%;
-
 }
 
 #wrapper {
-   background-color:rgb(255, 255, 255, 0.5);
+   
    height:66%;
    width: 100%;
+   position:relative;
 }
 
 #headline {
    color:black;
    text-align:center;
    margin: 50px auto 0;
+   font-size: 28px;
 }
 
 #input-section {
-
    display: flex;
    justify-content: center;
    align-items: center;
@@ -60,8 +59,10 @@ html {
    border: 1px solid gray;
    height:30px;
    text-align: center;
-   margin:0 10px;
+   margin:5px 5px;
    font-size:14px;
+   font-family: 'Spartan', sans-serif;
+   background-color: white;
 }
 
 ::-webkit-input-placeholder { /* Edge */
@@ -102,7 +103,7 @@ html {
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
-   margin: 50px auto 0;
+   margin: 40px auto 0;
 }
 
 .result-div {
@@ -112,12 +113,55 @@ html {
 }
 
 .result-text {
-   font-size:30px;
+   font-size:24px;
 }
 
-#footer {
-   position: fixed;
-   bottom:30px;
-   color:white;
-   font-size: 30px;
+#copyright {
+   position:absolute;
+   bottom: 0;
+   right: 0;
+   color:black;
+   font-size: 12px;
+   font-weight: 400;
+   padding: 0 3px 3px 0;
+}
+
+
+/* Tablet Styles */
+
+@media screen and (min-width: 768px){
+   
+   #headline {
+      font-size: 40px;
+   }
+
+   #input-temp, 
+   #input-temp-scale, 
+   #convert {
+      
+      height:35px;
+      text-align: center;
+      margin:5px 5px;
+      font-size:20px;
+      padding: 0 5px;
+   }
+
+   ::-webkit-input-placeholder { /* Edge */
+      
+      font-size:20px;
+    }
+    
+   :-ms-input-placeholder { /* Internet Explorer 10-11 */
+     
+      font-size:20px;
+    }
+    
+   ::placeholder {
+      
+      font-size:20px;
+    }
+   
+    .result-text {
+      font-size:32px;
+   }
 }
