--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ html {
    justify-content: center;
    align-items: center;
    flex-flow: column wrap;
-   height: 100vh;
+   min-height: 100vh;
    width: 100%;
 }
 
@@ -147,7 +147,7 @@ html {
 
 /* Tablet Styles */
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 600px){
    
    #headline {
       font-size: 36px;
@@ -193,7 +193,41 @@ html {
 
 /* Tablet in landscape */
 
-@media all and (min-width:768px) and (orientation:landscape) {
-   #headline{
-      /* styles here */
-} }
+@media all and (min-width: 600px) and (orientation:landscape) {
+   #body {
+      height: auto;
+      min-height: 100%;
+   }
+
+   #container {
+      height:100%;
+   }
+
+   #wrapper {
+      height:80%;    
+   }
+
+   #content {
+      width:60%
+   }
+}
+
+
+/*Larger Tablets in portrait*/
+
+@media screen and (min-width: 992px){
+   #content {
+      width:50%
+   }
+}
+
+/* Large Tablets in landscape and Desktops/Laptops */
+
+@media screen and (min-width: 1200px){
+
+   #content {
+      width:35%
+   }
+
+}
+
